--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div class="hearts"></div>
 <h1 id="question">Do you love me? 💖</h1>
 
 <div class="container">
