--- a/yes_page.html
+++ b/yes_page.html
@@ -2,9 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Love ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>superLOVE💘</title>
+  <style>
+    /* Background gradient animation */
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #ff4b5c, #ff758c);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
+      overflow: hidden;
+      font-family: 'Arial', sans-serif;
+    }
+
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Centered message */
+    h1 {
+      color: white;
+      text-align: center;
+      font-size: 3em;
+      z-index: 2;
+      animation: pulse 2s infinite;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.1); }
+      100% { transform: scale(1); }
+    }
+
+    /* Floating hearts */
+    .heart {
+      position: absolute;
+      font-size: 2em;
+      color: pink;
+      opacity: 0.7;
+      animation: floatUp linear infinite;
+    }
+
+    @keyframes floatUp {
+      0% { transform: translateY(100vh) scale(0.8); opacity: 0; }
+      10% { opacity: 1; }
+      100% { transform: translateY(-100px) scale(1.2); opacity: 0; }
+    }
+
+  </style>
 </head>
-<body style="margin:0; display:flex; justify-content:center; align-items:center; height:100vh; background:#ff4b5c; color:white; text-align:center;">
-  <h1>You said YES 😍❤️<br>I love you too begum now lipstick 😋💖</h1>
+<body>
+
+<h1>You said YES 😍❤️<br>I love you too Begum jee, now lipstick 😋💖</h1>
+
+<!-- Hearts container -->
+<script>
+  // Create multiple floating hearts
+  const colors = ["#ff4b5c", "#ff758c", "#ff9a9e", "#ffd1dc", "#ffb6c1"];
+  const numHearts = 20;
+
+  for (let i = 0; i < numHearts; i++) {
+    const heart = document.createElement('div');
+    heart.classList.add('heart');
+    heart.textContent = "❤️";
+    heart.style.left = Math.random() * window.innerWidth + "px";
+    heart.style.fontSize = (Math.random() * 30 + 20) + "px";
+    heart.style.animationDuration = (Math.random() * 10 + 5) + "s";
+    heart.style.animationDelay = (Math.random() * 5) + "s";
+    heart.style.color = colors[Math.floor(Math.random() * colors.length)];
+    document.body.appendChild(heart);
+  }
+</script>
+
 </body>
 </html>
