--- a/yes_page.html
+++ b/yes_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Love ❤️</title>
+  <title>superLOVE❤️</title>
 
   <!-- Stylish romantic font -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
       animation: pulse 2s infinite;
       text-shadow: 2px 2px 10px rgba(0,0,0,0.3);
       line-height: 1.4;
-      max-width: 90%;
+      max-width: 70%;
     }
 
     @keyframes pulse {
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-<h1>Hehe, You said YES 😍❤️<br>I love you too begum jee, now lipstick😋💘 </h1>
+<h1> Hehe,You said YES❤️<br>I love you too begum jee, now lipstick😋💘 </h1>
 
 <script>
   // Create multiple floating hearts
